# PLSQL-Learning

./: COURSE_GUIDE.md  CURRICULUM_RECOMMENDATIONS.md  EXAMPLE_SOLUTIONS_LEVEL1.sql  NotNullVariable.sql  QUICK_START_GUIDE.sql  README_COURSE.txt  VariableAssignment.sql  bulk_processing_with_collections.sql  control_table_etl_example.sql  docker-compose.yml  etl_comparison_guide.sql  etl_control_framework_demo.sql  greetings.sql  greetings_with_exceptionHandling.sql  init.sql  learning_course.sql  null_for_placeholder.sql  oracle_builtins_cheatsheet.md  refactored_etl_package.sql  searched_case_statement.sql  simple_case_statement.sql  simple_go_to_statement.sql  unit_testing_example.sql  user_defined_exceptions.sql  using _null_statement.sql  utplsql_install_sys.sql  utplsql_post_install_sys.sql  varaible_with_default.sql  variables_using_column_datatype.sql
advanced/: advanced_exception_handling.sql  bulk_processing_with_collections.sql  user_defined_exceptions.sql
basics/: basic_loop_continue_example.sql  comments_example.sql  select_into_example.sql  varaibles_using_if_statements.sql  variables_using_column_datatype.sql  variables_using_constants.sql
cursors/: basic_cursors_example.sql  cursor_for_loop_example.sql
etl/: control_table_etl_example.sql  etl_refactored_tests.sql
functions/: basic_functions_example.sql
mcp_server/: .env.example  README.md  __init__.py  pyproject.toml  server.py
mcp_server/plsql_learning_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
misc/: scratch.sql
procedures/: basic_procedure_example.sql
testing/: README.md  (+3 more)
(+74 files in other folders)
