[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plsql-learning-mcp"
version = "0.1.0"
description = "FastMCP Oracle server for the PLSQL learning project"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "oracledb>=2.0.0",
]

[tool.setuptools]
packages = ["mcp_server"]

[tool.setuptools.package-dir]
mcp_server = "."
